# 37_4

./: .gitignore  CMakeLists.txt
37_4_1/: 37_4_1_CalcMainWindow.cpp  37_4_1_CalcMainWindow.h  37_4_1_MainWindow.ui  37_4_1_main.cpp  CMakeLists.txt
37_4_2/: 37_4_2.qml
37_4_3/: CMakeLists.txt  TV_Control.cpp  TV_Control.h  TV_Control_Interface.ui  main.cpp
